# GoogleTest

./: CMakeLists.txt
include/: gtest.h
src/: gtest.cpp  main.cpp
